test/tests/bad/undef-var.carth
;; UndefVar

(def undef-var this-var-is-undefined)
